Added Wizard and Animation for Swagger.
